--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -278,7 +278,7 @@
 	 */
 
 	canfd@0 {
-                compatible = "microchip,mcp2515", "microchip,mcp2518fd";
+                compatible = "microchip,mcp2517fd";
                 reg = <0x0>;
                 clocks = <&clk20m>;
                 #interrupts = <&gpio3 RK_PB6 IRQ_TYPE_LEVEL_LOW>;
