--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -281,9 +281,9 @@
                 compatible = "microchip,mcp2517fd";
                 reg = <0x0>;
                 clocks = <&clk20m>;
-                #interrupts = <&gpio3 RK_PB6 IRQ_TYPE_LEVEL_LOW>;
-                interrupt-parent = <&gpio3>;
-                interrupts = <RK_PB6 IRQ_TYPE_LEVEL_LOW>;
+                //#interrupts = <&gpio3 RK_PB6 IRQ_TYPE_LEVEL_LOW>;
+                //interrupt-parent = <&gpio3>;
+                //interrupts = <RK_PB6 IRQ_TYPE_LEVEL_LOW>;
                 spi-max-frequency = <4000000>;
         };
 
