--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -286,11 +286,11 @@
                 spi-max-frequency = <20000000>;
         };
 
-	//spidev@0 {
-		//compatible = "spidev";
-		//reg = <0>;
-		//spi-max-frequency = <4000000>;
-	//};
+	spidev@0 {
+		compatible = "spidev";
+		reg = <0>;
+		spi-max-frequency = <4000000>;
+	};
 
 	//spidev@1 {
 		//compatible = "spidev";
