--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -267,9 +267,15 @@
 //	extends-desktop = <&lvds0>;
 //};
 
+
 /* LPSPI0 on expansion header */
 &lpspi0 {
-	assigned-clock-rates = <60000000>;
+	#address-cells = <1>;
+	#size-cells = <0>;
+	num-cs = <1>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_lpspi0>;
+	cs-gpios = <&lsio_gpio1 8 GPIO_ACTIVE_LOW>;
 	status = "okay";
 
 	/*
@@ -278,12 +284,15 @@
 	 */
 
 	canfd@0 {
-                compatible = "microchip,mcp2517fd";
-                reg = <0x0>;
-                //clocks = <&clk20m>;
-                interrupt-parent = <&lsio_gpio1>;
-                interrupts = <1 IRQ_TYPE_LEVEL_LOW>;
-                spi-max-frequency = <20000000>;
+			reg = <0>;
+			compatible = "microchip,mcp2517fd";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_mcp2517fd>;
+			spi-max-frequency = <20000000>;
+			clocks = <&mcp2517fd_osc>;
+			interrupt-parent = <&lsio_gpio1>;
+			interrupts = <1 IRQ_TYPE_LEVEL_LOW>;
+			xceiver-supply = <&reg_5v_board>
         };
 
 	spidev@0 {
@@ -460,6 +469,12 @@
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_expansion>;
+	
+	/* SPI0_IRQ_N */
+	pinctrl_mcp2517fd: mcp2517fdgrp{
+		IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020
+	}
+
 
 	/* Expansion Connector */
 	pinctrl_expansion: expansiongrp {
@@ -475,7 +490,7 @@
 			/* GPIO4_21 */
 			IMX8QXP_USDHC1_WP_LSIO_GPIO4_IO21			0x06000020
 			/* SPI0_IRQ_N */
-			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020
+			/* IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020*/
 			/* EXP_I2C_IRQ_N */
 			IMX8QXP_QSPI0A_SS1_B_LSIO_GPIO3_IO15		0x06000020
 			/* EXP_I2C_GPIO */
