--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -276,6 +276,8 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpspi0>;
 	cs-gpios = <&lsio_gpio1 8 GPIO_ACTIVE_LOW>;
+	// assigned-clocks = <&clk IMX_SC_R_SPI_0 IMX_SC_PM_CLK_PER>;
+	// assigned-clock-rates = <40000000>;
 	status = "okay";
 
 	/*
@@ -283,22 +285,22 @@
 	 * Expect a harmless kernel warning if you enable spidev as slave.
 	 */
 
-	canfd@0 {
-			reg = <0>;
-			compatible = "microchip,mcp2517fd";
-			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_mcp2517fd>;
-			spi-max-frequency = <20000000>;
-			clocks = <&mcp2517fd_osc>;
-			interrupt-parent = <&lsio_gpio1>;
-			interrupts = <1 IRQ_TYPE_LEVEL_LOW>;
-        };
-
-	spidev@0 {
-		compatible = "spidev";
+	can4: can@3 {
 		reg = <0>;
+		compatible = "microchip,mcp2517fd";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_mcp2517fd>;
 		spi-max-frequency = <4000000>;
+		interrupt-parent = <&lsio_gpio1>;
+		interrupts = <1 IRQ_TYPE_LEVEL_LOW>;
+		clocks = <&mcp2517fd_osc>;
 	};
+
+	// spidev@0 {
+	// 	compatible = "spidev";
+	// 	reg = <0>;
+	// 	spi-max-frequency = <4000000>;
+	// };
 
 	//spidev@1 {
 		//compatible = "spidev";
@@ -467,12 +469,12 @@
 /* IOMUX */
 &iomuxc {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_expansion>;
+	pinctrl-0 = <&pinctrl_expansion &pinctrl_mcp2517fd>;
 	
 	/* SPI0_IRQ_N */
 	pinctrl_mcp2517fd: mcp2517fdgrp {
 		fsl,pins = <
-			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020
+			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0xce000020
 		>;
 	};
 
