--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dtsi
@@ -975,7 +975,7 @@
 			IMX8QXP_SPI0_SDO_ADMA_SPI0_SDO	0x0600004c
 			IMX8QXP_SPI0_SDI_ADMA_SPI0_SDI	0x0600004c
 			IMX8QXP_SPI0_CS0_LSIO_GPIO1_IO08	0x06000020
-			IMX8QXP_SPI0_CS1_LSIO_GPIO1_IO07	0x06000020
+			// IMX8QXP_SPI0_CS1_LSIO_GPIO1_IO07	0x06000020
 		>;
 	};
 
