Update device tree mcp

--- a/arch/arm64/boot/dts/digi/ccimx8x-mfg-functional.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-mfg-functional.dts
@@ -485,7 +485,7 @@
 			IMX8QXP_ESAI0_SCKR_LSIO_GPIO0_IO02			0x06000020
 			IMX8QXP_ESAI0_SCKT_LSIO_GPIO0_IO03			0x06000020
 			IMX8QXP_ESAI0_TX1_LSIO_GPIO0_IO05			0x06000020
-			IMX8QXP_USB_SS3_TC1_LSIO_GPIO4_IO04		0x06000020
+			/*IMX8QXP_USB_SS3_TC1_LSIO_GPIO4_IO04		0x06000020*/
 			IMX8QXP_USB_SS3_TC0_LSIO_GPIO4_IO03		0x06000020
 			IMX8QXP_USB_SS3_TC2_LSIO_GPIO4_IO05		0x06000020
 			IMX8QXP_USB_SS3_TC3_LSIO_GPIO4_IO06		0x06000020
@@ -639,7 +639,7 @@
 			/* CSI_D5 */
 			IMX8QXP_SPI0_CS1_LSIO_GPIO1_IO07	0x06000020
 			/* CSI_D6 */
-			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01	0x06000020
+			// IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01	0x06000020
 			/* CSI_D7 */
 			IMX8QXP_SPI2_SDI_LSIO_GPIO1_IO02	0x06000020
 		>;
