--- a/arch/arm64/boot/dts/digi/ccimx8x-mfg-interim.dtsi
+++ b/arch/arm64/boot/dts/digi/ccimx8x-mfg-interim.dtsi
@@ -279,7 +279,7 @@
 			IMX8QXP_ESAI0_TX4_RX1_LSIO_GPIO0_IO08		0x06000020
 			IMX8QXP_SPDIF0_TX_LSIO_GPIO0_IO11			0x06000020
 			IMX8QXP_SPI0_SCK_LSIO_GPIO1_IO04			0x06000020
-			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020
+			/*IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01			0x06000020*/
 			IMX8QXP_SAI1_RXD_LSIO_GPIO0_IO29			0x06000020
 			IMX8QXP_ESAI0_TX5_RX0_LSIO_GPIO0_IO09		0x06000020
 			IMX8QXP_SPDIF0_RX_LSIO_GPIO0_IO10			0x06000020
