--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro-mfg.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro-mfg.dts
@@ -302,7 +302,7 @@
 			/* SPI0_SDO (J27 PIN7) */
 			IMX8QXP_SPI0_SDO_LSIO_GPIO1_IO06		0x06000020
 			/* SPI0_IRQ_N (J27 PIN8) */
-			IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01		0x06000020
+			/*IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01		0x06000020*/
 			/* EXP_I2C_IRQ_N (J27 PIN14) */
 			IMX8QXP_QSPI0A_SS1_B_LSIO_GPIO3_IO15	0x06000020
 			/* EXP_I2C_GPIO (J27 PIN16) */
