--- a/arch/arm64/boot/dts/freescale/imx8qxp-lpddr4-val-lpspi-slave.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qxp-lpddr4-val-lpspi-slave.dts
@@ -7,18 +7,18 @@
 
 /delete-node/&spidev0;
 
-&pinctrl_lpspi2 {
-	fsl,pins = <
-		IMX8QXP_SPI2_SCK_ADMA_SPI2_SCK		0x600004c
-		IMX8QXP_SPI2_SDO_ADMA_SPI2_SDO		0x600004c
-		IMX8QXP_SPI2_SDI_ADMA_SPI2_SDI		0x600004c
-		IMX8QXP_SPI2_CS0_ADMA_SPI2_CS0		0x600004c
-	>;
-};
+// &pinctrl_lpspi2 {
+// 	fsl,pins = <
+// 		IMX8QXP_SPI2_SCK_ADMA_SPI2_SCK		0x600004c
+// 		IMX8QXP_SPI2_SDO_ADMA_SPI2_SDO		0x600004c
+// 		IMX8QXP_SPI2_SDI_ADMA_SPI2_SDI		0x600004c
+// 		IMX8QXP_SPI2_CS0_ADMA_SPI2_CS0		0x600004c
+// 	>;
+// };
 
-&lpspi2 {
-	#address-cells = <0>;
-	pinctrl-0 = <&pinctrl_lpspi2>;
-	/delete-property/ cs-gpios;
-	spi-slave;
-};
+// &lpspi2 {
+// 	#address-cells = <0>;
+// 	pinctrl-0 = <&pinctrl_lpspi2>;
+// 	/delete-property/ cs-gpios;
+// 	spi-slave;
+// };
