Set gpio0_12 back as gpio

--- a/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
+++ b/arch/arm64/boot/dts/digi/ccimx8x-sbc-pro.dts
@@ -532,7 +532,7 @@
 			/* GPIO4_19 */
 			IMX8QXP_USDHC1_RESET_B_LSIO_GPIO4_IO19		0x06000020
 			/* GPIO0_12 */
-			// IMX8QXP_SPDIF0_EXT_CLK_LSIO_GPIO0_IO12		0x06000020
+			IMX8QXP_SPDIF0_EXT_CLK_LSIO_GPIO0_IO12		0x06000020
 			/* GPIO5_09 */
 			IMX8QXP_ENET0_REFCLK_125M_25M_LSIO_GPIO5_IO09	0x06000020
 
