--- a/arch/arm64/configs/ccimx8_defconfig
+++ b/arch/arm64/configs/ccimx8_defconfig
@@ -122,7 +122,8 @@ CONFIG_BATMAN_ADV=y
 CONFIG_BPF_JIT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
-CONFIG_CAN_MCP25XXFD=m
+ #CONFIG_CAN_MCP25XXFD is not set
+CONFIG_CAN_MCP251XFD=m
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
